@@ -10,6 +10,8 @@
     <fx:define>
         <Double fx:id="GRID_SPACING" fx:value="5" />
         <Double fx:id="PADDING" fx:value="10" />
+        <Double fx:id="TILE_PANE_HEIGHT" fx:value="450" />
+        <Double fx:id="TILE_PANE_WIDTH" fx:value="450" />
     </fx:define>
 
     <padding>
@@ -17,10 +19,11 @@
     </padding>
 
     <Button fx:id="installPlugin" text="Install plugin" onAction="#choosePlugin"
-            onDragEntered="#dragEntersPluginButton"
             onDragOver="#dragFilesOverPluginButton"
-            onDragDropped="#dropFileOverPluginButton"
-            onDragExited="#dragExitsPluginButton" />
+            onDragDropped="#dropFileOverPluginButton" />
 
-    <TilePane fx:id="plugins" hgap="${GRID_SPACING}" vgap="${GRID_SPACING}" prefColumns="5" />
+    <ScrollPane prefHeight="$TILE_PANE_HEIGHT" minHeight="$TILE_PANE_HEIGHT" maxHeight="$TILE_PANE_HEIGHT"
+                prefWidth="$TILE_PANE_WIDTH" minWidth="$TILE_PANE_WIDTH" maxWidth="$TILE_PANE_WIDTH">
+        <TilePane fx:id="plugins" hgap="${GRID_SPACING}" vgap="${GRID_SPACING}" prefColumns="5" />
+    </ScrollPane>
 </VBox>
